get jokes from api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">movilesWS7A</string>
+    <string name="mostrar_chiste">Mostrar Chiste</string>
 </resources>
